--- a/theme/snippets/jumplink-preload-images.liquid
+++ b/theme/snippets/jumplink-preload-images.liquid
@@ -1,4 +1,4 @@
-<div id="preloaded-images">
+<div class="preloaded-images">
     <!--
     <img src="{{ 'Arrow-Right.svg' | asset_url }}" width="1" height="1" alt="Image 01" />
     <img src="{{ 'Arrow-Right-white.svg' | asset_url }}" width="1" height="1" alt="Image 02" />
