--- a/theme/snippets/jumplink-logged-in.liquid
+++ b/theme/snippets/jumplink-logged-in.liquid
@@ -7,8 +7,8 @@
             
         </h2>
         <div class="text-center my-3">
-            <a href="/account" class="btn btn-secondary">{{ 'navbar.shop_actions.my_account' | t }}</a>
-            <a href="/account/logout" class="btn btn-secondary no-barba">{{ 'navbar.shop_actions.logout' | t }}</a>
+            <a href="/account" class="btn btn-secondary">{{ 'navigation.shop_actions.my_account' | t }}</a>
+            <a href="/account/logout" class="btn btn-secondary no-barba">{{ 'navigation.shop_actions.logout' | t }}</a>
             <a href="/" class="btn btn-primary">Continue watching</a>
         </div>
     </div>
