--- a/theme/snippets/jumplink-product-photo-carousel.liquid
+++ b/theme/snippets/jumplink-product-photo-carousel.liquid
@@ -98,3 +98,7 @@
     Modal
 {% endcomment %}
 {% include 'jumplink-product-photo-modal' %}
+
+<div class="preloaded-images">
+    <img src="{{ product.images.last.src | img_url: "master" }}" width="1" height="1" alt="Last Product Image" />
+</div>
