--- a/theme/templates/search.liquid
+++ b/theme/templates/search.liquid
@@ -19,10 +19,10 @@ selectors inside search.css.
       <div class="col-xs-12 col-md-6 col-md-offset-3 text-center">
         <form action="/search" method="get" class="search-form form-inline mb-1" role="search">
           <div class="form-group">
-            <input name="q" type="search" class="form-control" id="search-field" placeholder="{{ 'navbar.shop_actions.search' | t }}" value="{{ search.terms | escape }}" />
+            <input name="q" type="search" class="form-control" id="search-field" placeholder="{{ 'navigation.shop_actions.search' | t }}" value="{{ search.terms | escape }}" />
           </div>
           <div class="form-group">
-            <input type="submit" class="btn btn-primary" id="search-submit" value="{{ 'navbar.shop_actions.search' | t }}" />
+            <input type="submit" class="btn btn-primary" id="search-submit" value="{{ 'navigation.shop_actions.search' | t }}" />
           </div>
         </form>
       </div>
