--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -46,7 +46,7 @@
 @import 'iconset';
 @import 'modal';
 
-@import 'customers-login-register';
+@import 'customers';
 @import 'list-collections';
 @import 'collection';
 @import 'product';
