--- a/theme/snippets/app-jumplink-ec-collection-unlocked.liquid
+++ b/theme/snippets/app-jumplink-ec-collection-unlocked.liquid
@@ -1,14 +1,12 @@
 {% comment %}
-Is the current product unlocked?
+Is the current collection unlocked?
 {% endcomment %}
 {% assign unlocked = false %}
 {% if customer %}
     {% assign collectionHandles = customer.metafields.c_f.jumplink_unlocked_collections | strip | remove: ' ' | split: ',' %}
     {% for collectionHandle in collectionHandles %}
-        {% for collection in product.collections %}
-            {% if collection.handle == collectionHandle %}
-                {% assign unlocked = true %}
-            {% endif %}
-        {% endfor %}
+        {% if collection.handle == collectionHandle %}
+            {% assign unlocked = true %}
+        {% endif %}
     {% endfor %}
 {% endif %}
