--- a/theme/snippets/jumplink-navbar-dropdown.liquid
+++ b/theme/snippets/jumplink-navbar-dropdown.liquid
@@ -33,23 +33,34 @@
                 {% if l.url == '/account/logout' %}
                     {% assign class = 'no-barba' %}
                 {% endif %}
-                {% if l.title contains "[C]"%}
-                    {% if customer %}
+
+                {% comment %}
+                    Hide cart link if cart is not active in theme settings
+                {% endcomment %}
+                {% assign hide_link = false %}
+                {% if settings.cart == false and l.url == '/cart' %}
+                    {% assign hide_link = true %}
+                {% endif %}
+
+                {% unless hide_link %}
+                    {% if l.title contains "[C]"%}
+                        {% if customer %}
+                                <a href="{{ l.url }}" class="nav-link dropdown-item level-2 mb-0 {{ l.handle }} {{ class }}">
+                                    {{ l.title | remove: "[C]" }}
+                                </a>
+                        {% endif %}
+                    {% elsif l.title contains "[N]" %}
+                        {% unless customer %}
+                            <a href="{{ l.url }}" class="nav-link dropdown-item level-2 mb-0 {{ l.handle }} {{ class }}">
+                                {{ l.title | remove: "[N]" }}
+                            </a>
+                        {% endunless %}
+                    {% else %}
                         <a href="{{ l.url }}" class="nav-link dropdown-item level-2 mb-0 {{ l.handle }} {{ class }}">
-                            {{ l.title | remove: "[C]" }}
+                            {{ l.title }}
                         </a>
                     {% endif %}
-                {% elsif l.title contains "[N]" %}
-                    {% unless customer %}
-                        <a href="{{ l.url }}" class="nav-link dropdown-item level-2 mb-0 {{ l.handle }} {{ class }}">
-                            {{ l.title | remove: "[N]" }}
-                        </a>
-                    {% endunless %}
-                {% else %}
-                    <a href="{{ l.url }}" class="nav-link dropdown-item level-2 mb-0 {{ l.handle }} {{ class }}">
-                        {{ l.title }}
-                    </a>
-                {% endif %}
+                {% endunless %}
             {% endfor %}
         {% elsif has_sub_categories %}
             {% for tag in link.object.all_tags %}
