--- a/theme/snippets/jumplink-favicons.liquid
+++ b/theme/snippets/jumplink-favicons.liquid
@@ -5,9 +5,7 @@
 <link rel="icon" type="image/png" href="{{ 'favicon-32x32.png' | asset_url }}" sizes="32x32">
 <link rel="icon" type="image/png" href="{{ 'favicon-16x16.png' | asset_url }}" sizes="16x16">
 <link rel="manifest" href="{{ 'manifest.json' | asset_url }}">
-<link rel="mask-icon" href="{{ 'safari-pinned-tab.svg' | asset_url }}" color="#e30613">
+<link rel="mask-icon" href="{{ 'safari-pinned-tab.svg' | asset_url }}" color="#000000">
 <link rel="shortcut icon" href="{{ 'favicon.ico' | asset_url }}">
-<meta name="apple-mobile-web-app-title" content="Anita Hass">
-<meta name="application-name" content="Anita Hass">
 <meta name="msapplication-config" content="{{ 'browserconfig.xml' | asset_url }}">
 <meta name="theme-color" content="#ffffff">
