--- a/theme/snippets/jumplink-navbar.liquid
+++ b/theme/snippets/jumplink-navbar.liquid
@@ -8,7 +8,7 @@
   <div class="container">
 
     <a class="navbar-brand" href="/">
-      <img src="{{ 'logo.svg' | asset_url }}" width="300" height="30" alt="STUDIO PEZZETTA">
+      <img class="img-fluid" src="{{ 'logo.svg' | asset_url }}" width="300" height="30" alt="STUDIO PEZZETTA">
     </a>
     
     <div class="w-100">
@@ -63,4 +63,4 @@
   </div>
 </nav>
 
-{% include 'jumplink-right-sidebar' %}
+{% include 'jumplink-sidebar-right' %}
