--- a/theme/templates/article.liquid
+++ b/theme/templates/article.liquid
@@ -17,11 +17,11 @@ Note that comment.created_at will only be defined if the comment did not have an
 {% endcomment %}
 
 
-<div class="container">
+<div class="container pt-5">
 
-  <h1 class="hidden"><a href="{{ blog.url }}">{{ blog.title }}</a></h1>
+  <h1 class="hidden-xs-up"><a href="{{ blog.url }}">{{ blog.title }}</a></h1>
 
-  {% include 'article-detail', border: false %}
+  {% include 'jumplink-article-detail', border: false %}
   
 </div>
 
