get variant of selections

--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -162,7 +162,7 @@
             {% endcomment %}
 
 
-            <product-variant-selectors options="product.selectOptions" class="product-variants d-flex justify-content-between align-items-stretch flex-row"></product-variant-selectors>
+            <product-variant-selectors product="product" class="product-variants d-flex justify-content-between align-items-stretch flex-row"></product-variant-selectors>
           
             {% if settings.cart %}
               <div class="input-group group-quantity-actions hidden-xs-up" role="group" aria-label="Adjust the quantity">
