--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -37,7 +37,7 @@
   <script src="{{'shopify_common.js'  | shopify_asset_url}}"></script>
   <script src="{{'customer_area.js'  | shopify_asset_url}}"></script>
   <script src="{{'api.jquery.js'  | shopify_asset_url}}"></script>
-  <script src="{{'option_selection.js'  | shopify_asset_url}}"></script>
+  <script src="{{'option_selection.js'  | asset_url}}"></script>
 
   <script>
     if(typeof(videojs) !== 'undefined' && typeof(videojs.options) !== 'undefined' && typeof(videojs.options.flash) !== 'undefined' ) {
