use shopify-productjs

--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -25,8 +25,10 @@
 @import '../../bower_components/jumplink-components/scss/carousel';
 @import '../../bower_components/jumplink-components/scss/spacing';
 
-@import '../../bower_components/slick-carousel/slick/slick.scss';
-@import '../../bower_components/slick-carousel/slick/slick-theme.scss';
+@import '../../bower_components/slick-carousel/slick/slick';
+@import '../../bower_components/slick-carousel/slick/slick-theme';
+
+@import '../../bower_components/shopify-productjs/src/scss/shopify-productjs';
 
 // import '../../bower_components/bootstrap-select/sass/bootstrap-select';
 // import '../../bower_components/bootstrap-select/sass/variables';
