--- a/theme/assets/theme.scss.liquid
+++ b/theme/assets/theme.scss.liquid
@@ -11605,6 +11605,14 @@ $slick-opacity-not-active: 0.25 !default;
     }
 }
 
+product-variant-dropdowns {
+    &.align-items-stretch {
+        .dropdown {
+            flex: 1;
+        }
+    }
+
+}
 html, body {
     height: 100%;
 }
