--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -33,7 +33,7 @@
   {% endcomment %}
   <script async src='https://www.google-analytics.com/analytics.js'></script>
 
-  <script src="{{'libs.min.js' | asset_url}}"></script>
+  <script src="{{'libs.js' | asset_url}}"></script>
   <script src="{{'shopify_common.js'  | shopify_asset_url}}"></script>
   <script src="{{'customer_area.js'  | shopify_asset_url}}"></script>
   <script src="{{'api.jquery.js'  | shopify_asset_url}}"></script>
